--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -5268,7 +5268,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "0acdf7de-8ea9-4a87-b8ca-443fae67809d",
+       "ref": "d537a130-43f7-4b21-a196-5c3daf952db8",
        "rows": [
         [
          "0",
@@ -58094,7 +58094,7 @@
        "[443488 rows x 1046 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58105,7 +58105,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total unique countries: 108\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_unique_countries = df_wvs[\"COUNTRY_ALPHA\"].nunique()\n",
+    "print(\"Total unique countries:\", total_unique_countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min year: 1981\n",
+      "Max year: 2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_year = df_wvs[\"S020\"].min()\n",
+    "max_year = df_wvs[\"S020\"].max()\n",
+    "\n",
+    "print(\"Min year:\", min_year)\n",
+    "print(\"Max year:\", max_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60449,7 +60489,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "f19d2520-6611-4ad2-8d04-4500d51393e2",
+       "ref": "8b0ab01f-5e4f-467b-b500-bdea9c7721f2",
        "rows": [
         [
          "0",
@@ -84288,7 +84328,7 @@
        "[4278 rows x 466 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84296,6 +84336,74 @@
    "source": [
     "df_dsp"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total unique countries: 179\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_unique_countries = df_dsp[\"country_name\"].nunique()\n",
+    "print(\"Total unique countries:\", total_unique_countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Earliest year: 2000\n",
+      "Latest year: 2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_year = df_dsp[\"year\"].min()\n",
+    "max_year = df_dsp[\"year\"].max()\n",
+    "\n",
+    "print(\"Earliest year:\", min_year)\n",
+    "print(\"Latest year:\", max_year)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
