--- a/notebooks/ideology_cluster.ipynb
+++ b/notebooks/ideology_cluster.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,19 @@
     "\n",
     "# Fit LDA with 10 Ideological Groups (you can tweak num_topics as needed)\n",
     "num_topics = 10\n",
-    "lda_model = LatentDirichletAllocation(n_components=num_topics, random_state=42)\n",
+    "lda_model = LatentDirichletAllocation(n_components=num_topics,\n",
+    "                                    doc_topic_prior = 0.25 ,\n",
+    "                                    topic_word_prior = 0.1 ,\n",
+    "                                    learning_method='online', # online updating not batch faster\n",
+    "                                    learning_decay=0.7, # how soon parameters are forgotten\n",
+    "                                    learning_offset=10.0, #downweights early learning steppts\n",
+    "                                    max_iter=50, # max number of iterations default 10 (iterations in M step)\n",
+    "                                    batch_size=1000, #size of batch to use\n",
+    "                                    evaluate_every=-1, # evaluate perplexity -1 is off\n",
+    "                                    mean_change_tol=0.001, # stopping tolerance for updating in E-step\n",
+    "                                    max_doc_update_iter=300, # maximum number of iterations in E-step (iterations over batch)\n",
+    "                                    n_jobs=-1, #number of cpu to use\n",
+    "                                    random_state=25) #random state, original was in 42 \n",
     "lda_matrix = lda_model.fit_transform(lda_data)\n",
     "\n",
     "# Extract Topic-Feature Importance\n",
